# TauriPrint

./: .gitignore  LICENSE  context.md  package-lock.json  readme.md
.agents/: AGENTS.md
.agents/skills/cargo-clippy-audit/: SKILL.md
.agents/skills/desktop-ui-ux/: SKILL.md
.github/workflows/: release.yml
RustPrinter/: index.html  package-lock.json  package.json  resize.ps1  sync-version.js  tailwind.config.js  vite.config.ts
RustPrinter/src/: main.ts  styles.css
RustPrinter/src-tauri/: .gitignore  Cargo.toml  print_logs.csv  tauri.conf.json
RustPrinter/src-tauri/capabilities/: default.json
RustPrinter/src-tauri/icons/: icon.icns
RustPrinter/src-tauri/src/: lib.rs  main.rs
RustPrinter/updater/: latest.json
