[package]
name = "rustprinter"
version = "1.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rustprinter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2.5.0"
lopdf = "0.42.0"
notify = { version = "8", features = ["macos_kqueue"] }
tauri-plugin-dialog = "2.7.1"
image = "0.25.10"
lazy_static = "1.5.0"
tauri-plugin-store = "2.4.3"
printpdf = { version = "0.5.3", features = ["embedded_images"] }
tauri-plugin-fs = "2.5.1"

tokio = { version = "1.52.3", features = ["full"] }
zip = "8.6.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"

[profile.release]
panic = "abort"

#lto = true
#opt-level = "z" # Optimize for size
strip = true

